# sanctum-player

./: .gitignore  Cargo.toml  README.md  config.json  config.json.example  files.txt
src/: config.rs  main.rs  mpris.rs  player.rs  playlist.rs  search.rs
src/ui/: mod.rs  playbar.rs  playlist.rs  searchbar.rs  sidebar.rs  tracklist.rs
