[package]
name = "sanctum"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = {version = "0.33.3", features = ["default", "all_loaders"]}
env_logger = "0.11.8"
fuzzy-matcher = "0.3.7"
image = "0.25.9"
lofty = "0.22.4"
rand = "0.9.2"
rodio = "0.21.1"
serde = "1.0.228"
serde_json = "1.0.145"
